Changed colors for better contrast

--- a/class2.html
+++ b/class2.html
@@ -113,7 +113,7 @@ echo $receipt;
           </section>
           <section>
             <h3>Global Scope</h3>
-            <p>A variable declared outside a function has a <span class="yellow">global</span> scope and can only be accessed outside a function.</p>
+            <p>A variable declared outside a function has a <span class="blue">global</span> scope and can only be accessed outside a function.</p>
 <pre><code class="php">$awesomeGroup = 'Girl Develop It'; //Global scope
 function whatIsAwesome() {
   echo $awesomeGroup . ' is pretty awesome.';
@@ -123,7 +123,7 @@ whatIsAwesome();
           </section>
           <section>
             <h3>Local Scope</h3>
-            <p>A variable declared within a function has a <span class="yellow">local</span> scope and can only be accessed within that function.</p>
+            <p>A variable declared within a function has a <span class="blue">local</span> scope and can only be accessed within that function.</p>
 <pre><code class="php">function whatIsAwesome() {
   $awesomeGroup = 'Girl Develop It'; //Local scope
 }
