Marked appropriate code class

--- a/class1.html
+++ b/class1.html
@@ -97,7 +97,7 @@
           <section>
             <h3>Let's Develop It</h3>
             <p>Make your first page! Find your www directory. On Windows, the default is C:\wamp\www. On a Mac, it is \Applications\MAMP\www\. Create a new folder, called gdi, and then create a file inside called index.php.</p>
-<pre><code>&lt;!DOCTYPE html&gt;
+<pre><code class="html">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
     &lt;title&gt;Test Page&lt;/title&gt;
@@ -153,7 +153,7 @@
           <section>
             <h3>PHP Tags</h3>
             <p>You can mix PHP and HTML. When a PHP server looks at a page, it only pays attention to code within the PHP tags.</p>
-<pre><code>&lt;?php CODE GOES HERE  ?&gt;
+<pre><code class="html">&lt;?php CODE GOES HERE  ?&gt;
 </code></pre>
           </section>
           <section>
