--- a/class2.html
+++ b/class2.html
@@ -328,7 +328,7 @@ if ($age >= 35) {
           <section>
             <h3>Using logical operators</h3>
             <p>You can use these operators to combine conditions.</p>
-<pre><code>$bananas = 5;
+<pre><code class="php">$bananas = 5;
 if ($bananas &gt;=2 &amp;&amp; $bananas &lt;7) {
   echo 'You have a reasonable number of bananas';
 } else {
@@ -481,7 +481,7 @@ foreach ($numberList as $value) {
           <section>
             <h3>Arrays with keys</h3>
             <p>You can also use the key values in your foreach loop.</p>
-<pre><code>$kittenColors = array(
+<pre><code class="php">$kittenColors = array(
   'Fluffy' =&gt; 'tabby',
   'Midnight' =&gt; 'black',
   'Admiral Snuggles' =&gt; 'white',
