--- a/class1.html
+++ b/class1.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/simple.css" id="theme">
+    <link rel="stylesheet" href="css/custom.css">
 
     <!-- For syntax highlighting -->
     <!-- light editor<link rel="stylesheet" href="lib/css/light.css">-->
@@ -50,7 +51,7 @@
         <!-- Opening slide -->
         <section>
           <section>
-            <img src = "img/circle-gdi-logo.png" alt="GDI Logo">
+            <img src="img/circle-gdi-logo.png" alt="GDI Logo" class="noborder" style="max-height:400px;">
             <h3>Intro to PHP and MySQL</h3>
             <h4>Class 1</h4>
           </section>
