Corrected default Mac folder

--- a/class1.html
+++ b/class1.html
@@ -97,7 +97,7 @@
           </section>
           <section>
             <h3>Let's Develop It</h3>
-            <p>Make your first page! Find your www directory. On Windows, the default is C:\wamp\www. On a Mac, it is \Applications\MAMP\www\. Create a new folder, called gdi, and then create a file inside called index.php.</p>
+            <p>Make your first page! Find your www directory. On Windows, the default is C:\wamp\www. On a Mac, it is \Applications\MAMP\htdocs\. Create a new folder, called gdi, and then create a file inside called index.php.</p>
 <pre><code class="html">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
