fix the explanation of 'while'

--- a/class2.html
+++ b/class2.html
@@ -351,7 +351,7 @@ if ($bananas &gt;=2 &amp;&amp; $bananas &lt;7) {
           </section>
           <section>
             <h3>While loops</h3>
-            <p>While will repeat the same code over and over until some condition is met.</p>
+            <p>While will repeat the same code over and over as long as some condition is met.</p>
 <pre><code class="php">$bottlesOfBeer = 99;
 while ($bottlesOfBeer &gt;= 1) {
   echo $bottlesOfBeer . ' bottles of beer on the wall &lt;br /&gt;';
