--- a/class3.html
+++ b/class3.html
@@ -130,9 +130,9 @@ VALUES (value1,value2,value3,...);
   Company: &lt;input type="text" name="company"/&gt;&lt;br/&gt;
   Type: &lt;input type="text" name="type"/&gt;&lt;br/&gt;
   Roast:
-  &lt;input type="radio" name="roast" value="light"&gt;Light&lt;/input&gt;
-  &lt;input type="radio" name="roast" value="medium"&gt;Medium &lt;/input&gt;
-  &lt;input type="radio" name="roast" value="dark"&gt;Dark&lt;/input&gt;
+&lt;label&gt;&lt;input type="radio" name="roast" value="light"&gt;Light&lt;/input&gt;&lt;/label&gt;
+&lt;label&gt;&lt;input type="radio" name="roast" value="medium"&gt;Medium &lt;/input&gt;&lt;/label&gt;
+&lt;label&gt;&lt;input type="radio" name="roast" value="dark"&gt;Dark&lt;/input&gt;&lt;/label&gt;
   &lt;br/&gt;
   &lt;textarea name="description" rows="10" cols="40"&gt;&lt;/textarea&gt;&lt;br/&gt;
   &lt;input type="submit" value="Submit"/&gt;
