--- a/class2.html
+++ b/class2.html
@@ -76,8 +76,9 @@
             <h3>Debugging your code</h3>
             <p>Not seeing anything when you run your code? You may need to turn on error logging. Put this code at the top of your page.</p>
 <pre><code class="php">// Report all PHP errors
-error_reporting(-1);
+error_reporting(1);
 </code></pre>
+  <a href="http://php.net/manual/en/function.error-reporting.php" target="_blank">PHP - Error Reporting Levels</a>
           </section>
         </section>
 
@@ -105,183 +106,13 @@ echo $receipt;
           </section>
         </section>
 
-        <!-- Variable Scope -->
-        <section id="scope">
-          <section>
-            <h3>Variable Scope</h3>
-            <p>The scope of a variable is how long the computer will remember it.</p>
-            <img src="img/footprints.jpg" alt="Footprints being washed away"/>
-            <p><small>Photo credit: <a href="http://www.flickr.com/photos/heyvikram/187950111/" target="_blank">_vikram</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
-          </section>
-          <section>
-            <h3>Global Scope</h3>
-            <p>A variable declared outside a function has a <span class="blue">global</span> scope and can only be accessed outside a function.</p>
-<pre><code class="php">$awesomeGroup = 'Girl Develop It'; //Global scope
-function whatIsAwesome() {
-  echo $awesomeGroup . ' is pretty awesome.';
-}
-whatIsAwesome();
-</code></pre>
-          </section>
-          <section>
-            <h3>Local Scope</h3>
-            <p>A variable declared within a function has a <span class="blue">local</span> scope and can only be accessed within that function.</p>
-<pre><code class="php">function whatIsAwesome() {
-  $awesomeGroup = 'Girl Develop It'; //Local scope
-}
-echo $awesomeGroup . ' is pretty awesome.';
-</code></pre>
-          </section>
-        </section>
+<!--EOC 1-->
 
-        <!-- Boolean -->
-        <section id="boolean">
-          <section>
-            <h3>Boolean Variables</h3>
-            <img src="img/kitten-switch.jpg" alt="Kitten with light switch"/>
-            <p><small>Photo credit: <a href="http://www.flickr.com/photos/elycefeliz/5726163170/" target="_blank">elycefeliz</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
-          </section>
-          <section>
-            <h3>Boolean Variables</h3>
-            <p>Boolean variables represent the logical values True and False</p>
-<pre><code class="php">$catsAreBest = true;
-$dogsRule = false;
-</code></pre>
-            <p>If you try to use another variable as a boolean, PHP will guess. The number 0, the empty string '', and the string '0' are considered false, everything else reads as true.</p>
-          </section>
-        </section>
 
-        <!--If/Then-->
-        <section id="if-then">
-          <section>
-            <h3>Control Flow</h3>
-            <img src="img/fork-path.jpg" alt="Forked path"/>
-            <p><small>Photo credit: <a href="http://www.flickr.com/photos/dennism2/1504087870/" target="_blank">DennisM2</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
-          </section>
-          <section>
-            <h3>The if statement</h3>
-            <p>Use if to tell PHP which lines of code to execute, based on a condition.</p>
-<pre><code class="php">if (condition) {
-  // statements to execute
-}
-</code></pre>
-<pre><code class="php">$bananas = 5
-if ($bananas &gt; 0) {
-  echo 'You have some bananas!';
-}
-</code></pre>
-          </section>
-          <section>
-            <h3>Comparison Operators</h3>
-            <table class="smalltext">
-              <thead>
-                <tr>
-                  <th width="150px">Example</th>
-                  <th width="250px">Name</th>
-                  <th>Result</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>$a == $b</td>
-                  <td>Equal</td>
-                  <td><strong><code>TRUE</code></strong> if $a is equal to $b (can be different types).</td>
-                </tr>
-                <tr>
-                  <td>$a === $b</td>
-                  <td>Identical</td>
-                  <td><strong><code>TRUE</code></strong> if $a is equal to $b, and the the same type.</td>
-                </tr>
-                <tr>
-                  <td>$a != $b</td>
-                  <td>Not equal</td>
-                  <td><strong><code>TRUE</code></strong> if $a is not equal to $b (can be different types).</td>
-                </tr>
-                <tr>
-                  <td>$a !== $b</td>
-                  <td>Not identical</td>
-                  <td><strong><code>TRUE</code></strong> if $a is not equal to $b, or they are not the same type.</td>
-                </tr>
-                <tr>
-                  <td>$a &lt; $b</td>
-                  <td>Less than</td>
-                  <td><strong><code>TRUE</code></strong> if $a is strictly less than $b.</td>
-                </tr>
-                <tr>
-                  <td>$a &gt; $b</td>
-                  <td>Greater than</td>
-                  <td><strong><code>TRUE</code></strong> if $a is strictly greater than $b.</td>
-                </tr>
-                <tr>
-                  <td>$a &lt;= $b</td>
-                  <td>Less than or equal to </td>
-                  <td><strong><code>TRUE</code></strong> if $a is less than or equal to $b.</td>
-                </tr>
-                <tr>
-                  <td>$a &gt;= $b</td>
-                  <td>Greater than or equal to </td>
-                  <td><strong><code>TRUE</code></strong> if $a is greater than or equal to $b.</td>
-                </tr>
-              </tbody>
-            </table>
-          </section>
-          <section>
-            <h3>Watch out!</h3>
-            <p>Don't mix up = and ==</p>
-            <img src="img/caution.jpg" alt="Caution Tape"/>
-            <p><small>Photo credit: <a href="http://www.flickr.com/photos/pictureperfectpose/76138988/" target="_blank">Eugene Zemlyanskiy</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
-          </section>
-          <section>
-            <h3>Let's Develop It</h3>
-            <p>Make a variable called "temperature." Write some code that tells you to put on a coat if it is below 50 degrees.</p>
-          </section>
-        </section>
 
-        <!--If/else -->
-        <section id="if-else">
-          <section>
-            <h3>Even more control flow</h3>
-            <img src="img/toomanysigns.jpg" alt="Sign post with multiple signs"/>
-            <p><small>Photo credit: <a href="http://www.flickr.com/photos/thomashawk/2402598275/" target="_blank">Thomas Hawk</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
-          </section>
-          <section>
-            <h3>The if/else statement</h3>
-            <p>Use else to provide an alternate set of instructions.</p>
-<pre><code class="php">$age = 28;
-if ($age &gt;= 16) {
-  echo 'Yay, you can drive!';
-} else {
-  echo 'Sorry, but you have ' . (16 - $age) .
-  ' years until you can drive.';
-}
-</code></pre>
-          </section>
-          <section>
-            <h3>The if/else if/else statement</h3>
-            <p>If you have multiple conditions, you can use else if.</p>
-<pre><code class="php">$age = 20;
-if ($age >= 35) {
-  echo 'You can vote AND hold any place in government';
-} else if ($age >= 30) {
-  echo 'You can vote AND run for the Senate';
-} else if ($age >= 18) {
-  echo 'You can vote';
-} else {
-  echo 'You can\'t vote, but you can still
-  write your representatives.';
-}
-</code></pre>
-          </section>
-          <section>
-            <h3>Let's Develop It</h3>
-            <p>Modify your "wear a coat" code for these conditions:</p>
-            <ol>
-              <li>If it is less than 50 degrees, wear a coat.</li>
-              <li>If it is less than 30 degrees, wear a coat and a hat.</li>
-              <li>If it is less than 0 degrees, stay inside.</li>
-              <li>Otherwise, wear whatever you want.</li>
-            </ol>
-          </section>
+
+
+
           <section>
             <h3>Logical Operators</h3>
             <table>
