--- a/class2.html
+++ b/class2.html
@@ -109,7 +109,138 @@ echo $receipt;
 <!--EOC 1-->
 
 
+<!--If/Then-->
+<section id="if-then">
+  <section>
+    <h3>Control Flow</h3>
+    <img src="img/fork-path.jpg" alt="Forked path"/>
+    <p><small>Photo credit: <a href="http://www.flickr.com/photos/dennism2/1504087870/" target="_blank">DennisM2</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
+  </section>
+  <section>
+    <h3>The if statement</h3>
+    <p>Use if to tell PHP which lines of code to execute, based on a condition.</p>
+<pre><code class="php">if (condition) {
+// statements to execute
+}
+</code></pre>
+<pre><code class="php">$bananas = 5
+if ($bananas &gt; 0) {
+echo 'You have some bananas!';
+}
+</code></pre>
+  </section>
+  <section>
+    <h3>Comparison Operators</h3>
+    <table class="smalltext">
+      <thead>
+        <tr>
+          <th width="150px">Example</th>
+          <th width="250px">Name</th>
+          <th>Result</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>$a == $b</td>
+          <td>Equal</td>
+          <td><strong><code>TRUE</code></strong> if $a is equal to $b (can be different types).</td>
+        </tr>
+        <tr>
+          <td>$a === $b</td>
+          <td>Identical</td>
+          <td><strong><code>TRUE</code></strong> if $a is equal to $b, and the the same type.</td>
+        </tr>
+        <tr>
+          <td>$a != $b</td>
+          <td>Not equal</td>
+          <td><strong><code>TRUE</code></strong> if $a is not equal to $b (can be different types).</td>
+        </tr>
+        <tr>
+          <td>$a !== $b</td>
+          <td>Not identical</td>
+          <td><strong><code>TRUE</code></strong> if $a is not equal to $b, or they are not the same type.</td>
+        </tr>
+        <tr>
+          <td>$a &lt; $b</td>
+          <td>Less than</td>
+          <td><strong><code>TRUE</code></strong> if $a is strictly less than $b.</td>
+        </tr>
+        <tr>
+          <td>$a &gt; $b</td>
+          <td>Greater than</td>
+          <td><strong><code>TRUE</code></strong> if $a is strictly greater than $b.</td>
+        </tr>
+        <tr>
+          <td>$a &lt;= $b</td>
+          <td>Less than or equal to </td>
+          <td><strong><code>TRUE</code></strong> if $a is less than or equal to $b.</td>
+        </tr>
+        <tr>
+          <td>$a &gt;= $b</td>
+          <td>Greater than or equal to </td>
+          <td><strong><code>TRUE</code></strong> if $a is greater than or equal to $b.</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+  <section>
+    <h3>Watch out!</h3>
+    <p>Don't mix up = and ==</p>
+    <img src="img/caution.jpg" alt="Caution Tape"/>
+    <p><small>Photo credit: <a href="http://www.flickr.com/photos/pictureperfectpose/76138988/" target="_blank">Eugene Zemlyanskiy</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
+  </section>
+  <section>
+    <h3>Let's Develop It</h3>
+    <p>Make a variable called "temperature." Write some code that tells you to put on a coat if it is below 50 degrees.</p>
+  </section>
+</section>
 
+<!--If/else -->
+<section id="if-else">
+  <section>
+    <h3>Even more control flow</h3>
+    <img src="img/toomanysigns.jpg" alt="Sign post with multiple signs"/>
+    <p><small>Photo credit: <a href="http://www.flickr.com/photos/thomashawk/2402598275/" target="_blank">Thomas Hawk</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></small></p>
+  </section>
+  <section>
+    <h3>The if/else statement</h3>
+    <p>Use else to provide an alternate set of instructions.</p>
+<pre><code class="php">$age = 28;
+if ($age &gt;= 16) {
+echo 'Yay, you can drive!';
+} else {
+echo 'Sorry, but you have ' . (16 - $age) .
+' years until you can drive.';
+}
+</code></pre>
+  </section>
+  <section>
+    <h3>The if/elseif/else statement</h3>
+    <p>If you have multiple conditions, you can use elseif.</p>
+<pre><code class="php">$age = 20;
+if ($age >= 35) {
+echo 'You can vote AND hold any place in government';
+} elseif ($age >= 30) {
+echo 'You can vote AND run for the Senate';
+} elseif ($age >= 18) {
+echo 'You can vote';
+} else {
+echo 'You can\'t vote, but you can still
+write your representatives.';
+}
+</code></pre>
+  </section>
+  <section>
+    <h2>Last Exercise of the Day!</h2>
+    <p>Modify your "wear a coat" code for these conditions:</p>
+    <ol>
+      <li>If it is less than 50 degrees, wear a coat.</li>
+      <li>If it is less than 30 degrees, wear a coat and a hat.</li>
+      <li>If it is less than 0 degrees, stay inside.</li>
+      <li>Otherwise, wear whatever you want.</li>
+    </ol>
+  </section>
+</section>
 
 
 
@@ -303,7 +434,7 @@ var_dump($fruits);
           </section>
           <section>
             <h3>Foreach loops</h3>
-            <p>Foreach is a special type of loop that works with arrays.</p>
+            <p><a href="http://php.net/manual/en/control-structures.foreach.php" target="_blank">Foreach</a> is a special type of loop that works with arrays.</p>
 <pre><code class="php">$numberList = array(1, 2, 3, 4, 5);
 foreach ($numberList as $value) {
   echo $value . ' times 2 equals ' . ($value*2) . '&lt;br /&gt;';
@@ -333,7 +464,7 @@ foreach ($kittenColors as $name =&gt; $color) {
         <section id="intro">
           <section>
             <h3>MySQL</h3>
-            <p>WAMP/MAMP includes three components</p>
+            <p>XAMPP/MAMP includes three components</p>
             <ol>
               <li><span class="blue">A</span>pache - A web server</li>
               <li><span class="blue">M</span>ySQL - Database software</li>
@@ -343,7 +474,7 @@ foreach ($kittenColors as $name =&gt; $color) {
           </section>
           <section>
             <h3>Today's code</h3>
-            <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class2-codesample.txt">txt file</a> or a <a href="class2-codesample.zip">zip file</a>.</p>
+            <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class2-codesample.txt" target="_blank">txt file</a> or a <a href="class2-codesample.zip" target="_blank">zip file</a>.</p>
           </section>
         </section>
 
@@ -425,7 +556,7 @@ foreach ($kittenColors as $name =&gt; $color) {
           </section>
           <section>
             <h3>Let's Develop It</h3>
-            <p>Let's create our first database. Start up WAMP/MAMP and go to <a href="http://localhost/phpmyadmin/">http://localhost/phpmyadmin/</a> (Windows) or <a href="http://localhost:8888/phpmyadmin/">http://localhost:8888/phpmyadmin/</a> (Mac)</p>
+            <p>Let's create our first database. Start up XAMPP/MAMP and go to <a href="http://localhost/phpmyadmin/" target="_blank">http://localhost/phpmyadmin/</a> (Windows) or <a href="http://localhost:8888/phpmyadmin/" target="_blank">http://localhost:8888/phpmyadmin/</a> (Mac)</p>
             <p>The default username is <span class="blue">"root"</span>. The default password is either <span class="blue">""</span> (i.e., leave it blank) or <span class="blue">"root"</span>.</p>
           </section>
           <section>
