MySQL section updates

--- a/class2.html
+++ b/class2.html
@@ -491,7 +491,7 @@ foreach ($kittenColors as $name =&gt; $color) {
           </section>
           <section>
             <h3>Today's code</h3>
-            <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class2-codesample.txt" target="_blank">txt file</a> or a <a href="class2-codesample.zip" target="_blank">zip file</a>.</p>
+            <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class2-codesample.zip" target="_blank">zip file</a>.</p>
           </section>
         </section>
 
@@ -560,6 +560,9 @@ foreach ($kittenColors as $name =&gt; $color) {
               <li>DELETE - remove data from a database table</li>
               <li>INSERT INTO - insert new data in a database tab</li>
             </ul>
+            <br />
+<pre><code class="MySQLl">SELECT * FROM D_TABLE
+</code></pre>
           </section>
         </section>
 
@@ -613,7 +616,7 @@ foreach ($kittenColors as $name =&gt; $color) {
               <li>company - varchar - 255</li>
               <li>type - varchar - 255</li>
               <li>roast - varchar - 255</li>
-              <li>description - text - 255</li>
+              <li>description - text</li>
             </ul>
           </section>
           <section>
